--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -1,7 +1,5 @@
 <div class="form-editor" ng-controller="FormEditor.Editor.FormController">
-  <ul class="nav nav-tabs">
-
-    <!-- ngRepeat: tab in visibleTabs -->
+  <ul class="tabs">
     <li val-tab="" class="active">
       <a href="#tabFormEditorLayout" data-toggle="tab" class="ng-binding" form-editor-localize key="composition.header">Form layout</a>
     </li>
@@ -14,7 +12,6 @@
     <li val-tab="">
       <a href="#tabFormEditorReceipt" data-toggle="tab" class="ng-binding" form-editor-localize key="receipt.header">Receipt</a>
     </li>
-
   </ul>
 
   <!-- ## layout ## -->
