Consistency with other labels

--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -188,7 +188,7 @@
       <input type="email" class="umb-editor" id="emailNotificationFromAddress" ng-model="model.value.emailNotificationFromAddress" ng-required="model.value.emailNotificationRecipients" />
       <label class="control-label">
         <input type="checkbox" ng-model="model.value.emailNotificationAttachments" />
-        <form-editor-localize key="emailNotification.attachments">Attach uploaded files to the mail</form-editor-localize>
+        <form-editor-localize key="emailNotification.attachments">Attach uploaded files to the email</form-editor-localize>
         <small class="help-text" form-editor-localize key="emailNotification.attachments.helpText">When choosing this option, please consider limiting the allowed size of the uploaded files.</small>
       </label>
     </div>
