Whoops - forgot a label

--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -244,7 +244,7 @@
     <p form-editor-localize key="receipt.page.text">
       If you want to redirect the users to another page after they have submitted the form, select the page below.
     </p>
-    <label class="control-label">Blah</label>
+    <label class="control-label" form-editor-localize key="receipt.page">Receipt page</label>
     <div class="controls controls-row">
       <ul class="unstyled list-icons success-page">
         <li ng-show="model.successPage == null">
