Bit o' text update

--- a/Source/Umbraco/Plugin/editor/data.html
+++ b/Source/Umbraco/Plugin/editor/data.html
@@ -1,6 +1,6 @@
 <div class="umb-editor umb-listview form-editor-data" ng-controller="FormEditor.Editor.DataController" ng-switch="dataState">
   <p form-editor-localize="" key="data.text">
-    The form submissions for your form are listed in the table below.
+    The submissions for your form are listed in the table below.
   </p>
   <div class="row-fluid" ng-switch-when="loading">
     <span class="dimmed" form-editor-localize key="data.loadingData">
